tests/snapshots/infos/current_difficulty.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 45
info:
  program: kermit
  args:
    - infos
    - current-difficulty
---
success: true
exit_code: 0
----- stdout -----
{
  "difficulty": "1"
}

----- stderr -----
