tests/snapshots/infos/current_hashrate_no_params.snap
---
source: tests/utils.rs
assertion_line: 18
info:
  program: kermit
  args:
    - infos
    - current-hashrate
---
success: true
exit_code: 0
----- stdout -----
{
  "hashrate": "0 MH/s"
}

----- stderr -----
