tests/snapshots/infos/discovered_neighbors.snap
---
source: tests/common/perform_cmd.rs
assertion_line: 38
info:
  program: kermit
  args:
    - infos
    - discovered-neighbors
---
success: true
exit_code: 0
----- stdout -----
[]

----- stderr -----
