tests/snapshots/infos/discovery_bad_param.snap
---
source: tests/utils.rs
assertion_line: 13
info:
  program: kermit
  args:
    - infos
    - discovery
    - UnknownType
    - 1.2.3.4
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Invalid value for: body (invalid tag for tagged object: UnknownType at index 28: decoding failure)
