tests/snapshots/infos/history_hashrate.snap
---
source: tests/utils.rs
assertion_line: 18
info:
  program: kermit
  args:
    - infos
    - history-hashrate
    - "100"
    - "200"
---
success: true
exit_code: 0
----- stdout -----
{
  "hashrate": "0 MH/s"
}

----- stderr -----
